--- a/src/scenes/login.fxml
+++ b/src/scenes/login.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane fx:id="anc" prefHeight="400.0" prefWidth="600.0" stylesheets="@PokePictures/login.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.Pokemon.LoginController">
+<AnchorPane fx:id="anc" prefHeight="400.0" prefWidth="600.0" stylesheets="@pokepictures/login.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="scenes.LoginController">
     <children>
         <Button fx:id="btnCreateNA" blendMode="MULTIPLY" layoutX="216.0" layoutY="255.0" mnemonicParsing="false" text="Create new account" />
         <TextField fx:id="txtFieldUsername" layoutX="225.0" layoutY="76.0" opacity="0.15" />
@@ -17,7 +17,7 @@
         <Button fx:id="btnLogin" blendMode="MULTIPLY" layoutX="276.0" layoutY="154.0" mnemonicParsing="false" text="Login" />
         <ImageView fx:id="imgView" fitHeight="109.0" fitWidth="121.0" layoutY="4.0" opacity="0.52" pickOnBounds="true" preserveRatio="true">
             <image>
-                <Image url="@PokePictures/pokeLogo.png" />
+                <Image url="@pokepictures/pokeLogo.png" />
             </image>
         </ImageView>
     </children>
