--- a/src/scenes/login.fxml
+++ b/src/scenes/login.fxml
@@ -7,14 +7,14 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane fx:id="anc" prefHeight="400.0" prefWidth="600.0" stylesheets="@pokepictures/login.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="scenes.LoginController">
+<AnchorPane fx:id="anc" prefHeight="400.0" prefWidth="600.0" stylesheets="@pokepictures/login.css" xmlns="http://javafx.com/javafx/10.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="scenes.LoginController">
     <children>
         <Button fx:id="btnCreateNA" blendMode="MULTIPLY" layoutX="216.0" layoutY="255.0" mnemonicParsing="false" text="Create new account" />
         <TextField fx:id="txtFieldUsername" layoutX="225.0" layoutY="76.0" opacity="0.15" />
         <TextField fx:id="txtFieldPassword" layoutX="226.0" layoutY="118.0" opacity="0.18" />
         <Label layoutX="225.0" layoutY="59.0" text="Username:" />
         <Label layoutX="227.0" layoutY="101.0" text="Password:" />
-        <Button fx:id="btnLogin" blendMode="MULTIPLY" layoutX="276.0" layoutY="154.0" mnemonicParsing="false" text="Login" />
+        <Button fx:id="btnLogin" blendMode="MULTIPLY" layoutX="276.0" layoutY="154.0" mnemonicParsing="false" onAction="#loginRequest" text="Login" />
         <ImageView fx:id="imgView" fitHeight="109.0" fitWidth="121.0" layoutY="4.0" opacity="0.52" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="@pokepictures/pokeLogo.png" />
