--- a/src/scenes/SelectStarter.fxml
+++ b/src/scenes/SelectStarter.fxml
@@ -2,30 +2,41 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.Blend?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="scenes.SelectStarterController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="scenes.SelectStarterController">
    <children>
       <Text fx:id="txtStarterMain" layoutX="96.0" layoutY="48.0" strokeType="OUTSIDE" strokeWidth="0.0" text="It's Dangerous to go Alone! Take a companion to guard you on your journey!" />
-      <ImageView fx:id="FireCat" fitHeight="157.0" fitWidth="137.0" layoutX="50.0" layoutY="122.0" onMouseClicked="#selectStarter">
+      <ImageView fx:id="leftStarter" fitHeight="150.0" fitWidth="150.0" layoutX="36.0" layoutY="122.0" onMouseClicked="#leftStarterPressed" smooth="false">
          <image>
             <Image url="@pokepictures/Growly.png" />
          </image>
+         <effect>
+            <Blend />
+         </effect>
       </ImageView>
-      <ImageView fx:id="GrassOwl" fitHeight="144.0" fitWidth="124.0" layoutX="251.0" layoutY="128.0" onMouseClicked="#selectStarter">
+      <ImageView fx:id="middleStarter" fitHeight="150.0" fitWidth="150.0" layoutX="225.0" layoutY="125.0" onMouseClicked="#middleStarterPressed">
          <image>
             <Image url="@pokepictures/OwlStarter.png" />
          </image>
+         <effect>
+            <Blend />
+         </effect>
       </ImageView>
-      <ImageView fx:id="WaterSeal" layoutX="453.0" layoutY="141.0" onMouseClicked="#selectStarter">
+      <ImageView fx:id="rightStarter" fitHeight="150.0" fitWidth="150.0" layoutX="417.0" layoutY="122.0" onMouseClicked="#rightStarterPressed">
          <image>
             <Image url="@pokepictures/Water.png" />
          </image>
+         <effect>
+            <Blend />
+         </effect>
       </ImageView>
       <TextField fx:id="fieldNickname" layoutX="207.0" layoutY="66.0" promptText="Give your friend a Name!" visible="false" />
-      <Button fx:id="btnNickname" layoutX="369.0" layoutY="66.0" mnemonicParsing="false" onAction="#finishedSelecting" text="OK" visible="false" />
+      <Button fx:id="btnNickname" layoutX="369.0" layoutY="66.0" mnemonicParsing="false" onAction="#setNickname" text="OK" visible="false" />
+      <Button fx:id="btnNoNickname" layoutX="254.0" layoutY="305.0" mnemonicParsing="false" onAction="#finishedSelecting" text="I like it's name" visible="false" />
    </children>
 </AnchorPane>
