--- a/src/scenes/TrainerMenu.fxml
+++ b/src/scenes/TrainerMenu.fxml
@@ -2,12 +2,14 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="scenes.TrainerMenuController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="scenes.TrainerMenuController">
    <children>
       <Label layoutX="181.0" layoutY="45.0" text="&lt;PlaceHolder&gt; Trainer Menu &lt;PlaceHolder&gt;" />
-      <Label layoutX="248.0" layoutY="154.0" text="Fill with things later" />
       <Button layoutX="272.0" layoutY="340.0" mnemonicParsing="false" onAction="#logoutButton" text="LogOut" />
+      <ListView layoutX="200.0" layoutY="91.0" orientation="HORIZONTAL" prefHeight="200.0" prefWidth="200.0" />
+      <Button fx:id="btnCollection" layoutX="454.0" layoutY="91.0" mnemonicParsing="false" onAction="#showPokemonCollection" text="Show Collection" />
    </children>
 </AnchorPane>
