--- a/src/scenes/NewUser.fxml
+++ b/src/scenes/NewUser.fxml
@@ -17,5 +17,6 @@
       <PasswordField fx:id="passwordConfirm" layoutX="219.0" layoutY="254.0" promptText="Password" />
       <Button layoutX="43.0" layoutY="343.0" mnemonicParsing="false" onAction="#backButton" text="Back" />
       <Button layoutX="505.0" layoutY="343.0" mnemonicParsing="false" onAction="#goButton" text="GO!" />
+      <Label fx:id="errorLabel" layoutX="279.0" layoutY="301.0" />
    </children>
 </AnchorPane>
