--- a/src/scenes/Login.fxml
+++ b/src/scenes/Login.fxml
@@ -9,21 +9,29 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane fx:id="anc" prefHeight="400.0" prefWidth="600.0" stylesheets="@pokepictures/login.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="scenes.LoginController">
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" fx:id="anc" prefHeight="835.0" prefWidth="1200.0"
+            stylesheets="@pokepictures/Login.css" xmlns="http://javafx.com/javafx/10.0.1"
+            fx:controller="scenes.LoginController">
     <children>
-        <Button fx:id="btnCreateNA" blendMode="MULTIPLY" layoutX="225.0" layoutY="284.0" mnemonicParsing="false" onAction="#newUser" text="Create new account" />
-        <Label layoutX="216.0" layoutY="138.0" text="Email:" />
-        <TextField fx:id="txtFieldUsername" layoutX="212.0" layoutY="156.0" />
-        <Label layoutX="216.0" layoutY="181.0" text="Password:" />
-      <PasswordField fx:id="txtFieldPassword" layoutX="213.0" layoutY="199.0" />
-        <Button fx:id="btnLogin" blendMode="MULTIPLY" layoutX="263.0" layoutY="235.0" mnemonicParsing="false" onAction="#loginRequest" text="Login" />
-        <ImageView fx:id="imgView" fitHeight="109.0" fitWidth="121.0" layoutX="232.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+        <Label fx:id="labelEmail" layoutX="361.0" layoutY="466.0" text="Email:"/>
+        <TextField fx:id="txtFieldUsername" layoutX="355.0" layoutY="507.0" prefHeight="25.0" prefWidth="476.0"
+                   promptText="Email"/>
+        <Label fx:id="labelPassword" layoutX="361.0" layoutY="558.0" text="Password:"/>
+        <PasswordField fx:id="txtFieldPassword" layoutX="355.0" layoutY="602.0" prefHeight="25.0" prefWidth="476.0"
+                       promptText="Password"/>
+        <Button fx:id="btnLogin" blendMode="MULTIPLY" layoutX="511.0" layoutY="657.0" mnemonicParsing="false"
+                onAction="#loginRequest" prefHeight="55.0" prefWidth="150.0" text="Login"/>
+        <ImageView fx:id="imgView" fitHeight="129.0" fitWidth="136.0" layoutX="521.0" layoutY="117.0"
+                   pickOnBounds="true" preserveRatio="true">
             <image>
-                <Image url="@pokepictures/pokeLogo.png" />
+                <Image url="@pokepictures/pokeLogo2.png"/>
             </image>
-         <effect>
-            <Blend />
-         </effect>
+            <effect>
+                <Blend/>
+            </effect>
         </ImageView>
+        <Button fx:id="btnCreateNA" blendMode="MULTIPLY" layoutX="461.0" layoutY="735.0" mnemonicParsing="false"
+                onAction="#newUser"
+                prefHeight="60.0" prefWidth="250.0" text="Create Account"/>
     </children>
 </AnchorPane>
