--- a/src/scenes/NewUser.fxml
+++ b/src/scenes/NewUser.fxml
@@ -5,18 +5,33 @@
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="scenes.NewUserController">
-   <children>
-      <Label layoutX="193.0" layoutY="53.0" text="&lt;PlaceHolder&gt; NewUser &lt;PlaceHolder&gt;" />
-      <Label layoutX="232.0" layoutY="100.0" text="Please enter your email" />
-      <TextField fx:id="email" layoutX="220.0" layoutY="126.0" promptText="Email" />
-      <Label layoutX="231.0" layoutY="163.0" text="Please enter a password" />
-      <PasswordField fx:id="password" layoutX="219.0" layoutY="188.0" promptText="Password" />
-      <Label layoutX="228.0" layoutY="225.0" text="Please confirm password" />
-      <PasswordField fx:id="passwordConfirm" layoutX="219.0" layoutY="254.0" promptText="Password" />
-      <Button layoutX="43.0" layoutY="343.0" mnemonicParsing="false" onAction="#backButton" text="Back" />
-      <Button layoutX="505.0" layoutY="343.0" mnemonicParsing="false" onAction="#goButton" text="GO!" />
-      <Label fx:id="errorLabel" layoutX="279.0" layoutY="301.0" />
-   </children>
+<AnchorPane fx:id="newAccountAnc" prefHeight="835.0" prefWidth="1200.0" stylesheets="@pokepictures/NewUser.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="scenes.NewUserController">
+    <children>
+        <Pane fx:id="pane1" layoutY="30.0" prefHeight="83.0" prefWidth="1200.0">
+            <children>
+                <Label fx:id="labelCreateAccount" layoutX="327.0" text="Create your account" />
+            </children>
+        </Pane>
+        <Pane fx:id="pane2" layoutX="23.0" layoutY="209.0" prefHeight="418.0" prefWidth="482.0">
+            <children>
+                <Label fx:id="labelUsername" layoutX="27.0" layoutY="21.0" text="Pick your username" />
+                <TextField fx:id="username" layoutX="21.0" layoutY="65.0" prefHeight="25.0" prefWidth="441.0" promptText="Username" />
+                <Label fx:id="labelEmail" layoutX="27.0" layoutY="117.0" text="Enter your email" />
+                <TextField fx:id="email" layoutX="21.0" layoutY="167.0" prefHeight="25.0" prefWidth="441.0" promptText="Email" />
+                <Label fx:id="labelPassword" layoutX="26.0" layoutY="217.0" text="Enter a password" />
+                <PasswordField fx:id="password" layoutX="21.0" layoutY="261.0" prefHeight="25.0" prefWidth="441.0" promptText="Password" />
+                <Label fx:id="labelPassword2" layoutX="27.0" layoutY="316.0" text="Confirm password" />
+                <PasswordField fx:id="passwordConfirm" layoutX="21.0" layoutY="360.0" prefHeight="25.0" prefWidth="441.0" promptText="Password" />
+            </children>
+        </Pane>
+        <Pane fx:id="pane3" layoutY="697.0" prefHeight="83.0" prefWidth="1200.0">
+            <children>
+                <Button fx:id="backButton" blendMode="MULTIPLY" layoutX="117.0" layoutY="12.0" mnemonicParsing="false" onAction="#backButton" prefHeight="60.0" prefWidth="250.0" text="Back" />
+                <Button fx:id="goButton" blendMode="MULTIPLY" layoutX="807.0" layoutY="12.0" mnemonicParsing="false" onAction="#goButton" prefHeight="60.0" prefWidth="250.0" text="GO!" />
+            </children>
+        </Pane>
+        <Label fx:id="errorLabel" layoutX="279.0" layoutY="301.0" />
+    </children>
 </AnchorPane>
