--- a/src/scenes/TrainerMenu.fxml
+++ b/src/scenes/TrainerMenu.fxml
@@ -7,9 +7,11 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="scenes.TrainerMenuController">
    <children>
-      <Label layoutX="181.0" layoutY="45.0" text="&lt;PlaceHolder&gt; Trainer Menu &lt;PlaceHolder&gt;" />
+      <Label fx:id="lblTop" layoutX="181.0" layoutY="45.0" text="&lt;PlaceHolder&gt; Trainer Menu &lt;PlaceHolder&gt;" />
       <Button layoutX="272.0" layoutY="340.0" mnemonicParsing="false" onAction="#logoutButton" text="LogOut" />
-      <ListView layoutX="200.0" layoutY="91.0" orientation="HORIZONTAL" prefHeight="200.0" prefWidth="200.0" />
+      <Button fx:id="btnAddPokemon" layoutX="454.0" layoutY="132.0" mnemonicParsing="false" onAction="#showAllPokemon" text="Find a new Pokemon" />
+      <ListView fx:id="lvCollection" layoutX="172.0" layoutY="77.0" orientation="HORIZONTAL" prefHeight="247.0" prefWidth="257.0" />
       <Button fx:id="btnCollection" layoutX="454.0" layoutY="91.0" mnemonicParsing="false" onAction="#showPokemonCollection" text="Show Collection" />
+      <Button fx:id="btnSelect" layoutX="518.0" layoutY="299.0" mnemonicParsing="false" text="Select" visible="false" />
    </children>
 </AnchorPane>
