--- a/src/scenes/ShowAllPokemon.fxml
+++ b/src/scenes/ShowAllPokemon.fxml
@@ -61,5 +61,6 @@
          </font>
       </Label>
       <Label fx:id="lblSpeed" layoutX="1027.0" layoutY="512.0" text="Label" />
+      <Button layoutX="48.0" layoutY="746.0" mnemonicParsing="false" onAction="#backButton" text="Back" />
     </children>
 </AnchorPane>
