--- a/src/scenes/TrainerCollection.fxml
+++ b/src/scenes/TrainerCollection.fxml
@@ -22,7 +22,7 @@
       <Button layoutX="520.0" layoutY="39.0" mnemonicParsing="false" text="Add To Battle Team" />
       <ImageView fx:id="imageView" fitHeight="150.0" fitWidth="200.0" layoutX="505.0" layoutY="164.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@pokepictures/pokeLogo.png" />
+            <Image url="@images/pokeLogo.png" />
          </image>
       </ImageView>
       <Label fx:id="lblName" layoutX="461.0" layoutY="352.0" text="Label" />
