--- a/src/scenes/view/SelectStarter.fxml
+++ b/src/scenes/view/SelectStarter.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="SelectStarterAnc" prefHeight="800.0" prefWidth="1200.0" stylesheets="@images/SelectStarter.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="scenes.SelectStarterController">
+<AnchorPane fx:id="SelectStarterAnc" prefHeight="800.0" prefWidth="1200.0" stylesheets="@images/SelectStarter.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="scenes.controller.SelectStarterController">
     <children>
         <Pane fx:id="pane" layoutY="30.0" prefHeight="90.0" prefWidth="1200.0">
             <children>
