--- a/src/scenes/view/images/ProfessorMenu.css
+++ b/src/scenes/view/images/ProfessorMenu.css
@@ -1,6 +1,6 @@
 #professorMenuAnc{
     -fx-background-size: 1200, 800;
-    -fx-background-image: url("professorBackground.png");
+    -fx-background-image: url("magikarpBackground.jpg");
 }
 #pane1{
     -fx-background-color: rgba(255, 255, 255, .2);
