--- a/src/scenes/view/ShowAllPokemon.fxml
+++ b/src/scenes/view/ShowAllPokemon.fxml
@@ -6,61 +6,70 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="scenes.controller.ShowAllPokemonController">
+<AnchorPane fx:id="showAllPokemonAnc" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" stylesheets="@images/ShowAllPokemon.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="scenes.controller.ShowAllPokemonController">
     <children>
-        <Label fx:id="labelTop" layoutX="229.0" layoutY="55.0" text="Pokemons in our Database" />
-        <ListView fx:id="listView" layoutX="200.0" layoutY="100.0" onEditStart="#showPokemon" prefHeight="200.0" prefWidth="200.0" />
-      <Button layoutX="201.0" layoutY="308.0" mnemonicParsing="false" onAction="#showPokemonCollection" text="Refresh List" />
-      <ImageView fx:id="imageView" fitHeight="150.0" fitWidth="200.0" layoutX="706.0" layoutY="125.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@images/pokeLogo.png" />
-         </image>
-      </ImageView>
-      <Button layoutX="348.0" layoutY="309.0" mnemonicParsing="false" onAction="#showPokemon" text="Select" />
-      <Label fx:id="lblName" layoutX="662.0" layoutY="313.0" text="Label" />
-      <Label layoutX="510.0" layoutY="303.0" text="Name:" underline="true">
-         <font>
-            <Font name="System Bold" size="25.0" />
-         </font>
-      </Label>
-      <Label fx:id="lblHP" layoutX="655.0" layoutY="511.0" text="Label" />
-      <Label layoutX="503.0" layoutY="493.0" text="Health:" underline="true">
-         <font>
-            <Font name="System Bold" size="25.0" />
-         </font>
-      </Label>
-      <Label layoutX="503.0" layoutY="564.0" text="Attack:" underline="true">
-         <font>
-            <Font name="System Bold" size="25.0" />
-         </font>
-      </Label>
-      <Label layoutX="849.0" layoutY="573.0" text="Defence: " underline="true">
-         <font>
-            <Font name="System Bold" size="25.0" />
-         </font>
-      </Label>
-      <Label fx:id="lblAtk" layoutX="655.0" layoutY="582.0" text="Label" />
-      <Label fx:id="lblDf" layoutX="1013.0" layoutY="583.0" text="Label" />
-      <Label layoutX="674.0" layoutY="400.0" text="Type:" underline="true">
-         <font>
-            <Font name="System Bold" size="25.0" />
-         </font>
-      </Label>
-      <Label layoutX="866.0" layoutY="312.0" text="ID:" underline="true">
-         <font>
-            <Font name="System Bold" size="25.0" />
-         </font>
-      </Label>
-      <Label fx:id="lblType" layoutX="819.0" layoutY="418.0" text="Label" />
-      <Label fx:id="lblID" layoutX="996.0" layoutY="330.0" text="Label" />
-      <Label layoutX="866.0" layoutY="502.0" text="Speed:" underline="true">
-         <font>
-            <Font name="System Bold" size="25.0" />
-         </font>
-      </Label>
-      <Label fx:id="lblSpeed" layoutX="1027.0" layoutY="512.0" text="Label" />
-      <Button layoutX="48.0" layoutY="746.0" mnemonicParsing="false" onAction="#backButton" text="Back" />
+        <Button fx:id="btnShowAllPokemon" blendMode="MULTIPLY" layoutX="59.0" layoutY="65.0" mnemonicParsing="false" onAction="#showPokemonCollection" prefHeight="60.0" prefWidth="191.0" text="Show All Pokémon" />
+        <Button fx:id="btnSelect" blendMode="MULTIPLY" layoutX="297.0" layoutY="65.0" mnemonicParsing="false" onAction="#showPokemon" prefHeight="60.0" prefWidth="120.0" text="Select" />
+        <Pane fx:id="pane2" layoutX="466.0" layoutY="46.0" prefHeight="708.0" prefWidth="455.0">
+            <children>
+                <ImageView fx:id="imageView" fitHeight="200.0" fitWidth="200.0" layoutX="114.0" layoutY="35.0" pickOnBounds="true" preserveRatio="true">
+                    <image>
+                        <Image url="@images/pokeLogo.png" />
+                    </image>
+                </ImageView>
+                <Label fx:id="labelName" layoutX="27.0" layoutY="330.0" text="Name:">
+                    <font>
+                        <Font name="System Bold" size="25.0" />
+                    </font>
+                </Label>
+                <Label fx:id="lblName" layoutX="123.0" layoutY="335.0" text="Label" />
+                <Label fx:id="labelType" layoutX="222.0" layoutY="330.0" text="Type:">
+                    <font>
+                        <Font name="System Bold" size="25.0" />
+                    </font>
+                </Label>
+                <Label fx:id="lblType" layoutX="306.0" layoutY="335.0" text="Label" />
+                <Label fx:id="labelID" layoutX="162.0" layoutY="387.0" text="ID:">
+                    <font>
+                        <Font name="System Bold" size="25.0" />
+                    </font>
+                </Label>
+                <Label fx:id="lblID" layoutX="214.0" layoutY="392.0" text="Label" />
+                <Label fx:id="labelHealth" layoutX="27.0" layoutY="488.0" text="Health:">
+                    <font>
+                        <Font name="System Bold" size="25.0" />
+                    </font>
+                </Label>
+                <Label fx:id="lblHP" layoutX="130.0" layoutY="493.0" text="Label" />
+                <Label fx:id="labelSpeed" layoutX="253.0" layoutY="488.0" text="Speed:">
+                    <font>
+                        <Font name="System Bold" size="25.0" />
+                    </font>
+                </Label>
+                <Label fx:id="lblSpeed" layoutX="367.0" layoutY="493.0" text="Label" />
+                <Label fx:id="labelAttack" layoutX="25.0" layoutY="561.0" text="Attack:">
+                    <font>
+                        <Font name="System Bold" size="25.0" />
+                    </font>
+                </Label>
+                <Label fx:id="lblAtk" layoutX="130.0" layoutY="566.0" text="Label" />
+                <Label fx:id="labelDefence" layoutX="246.0" layoutY="561.0" text="Defence: ">
+                    <font>
+                        <Font name="System Bold" size="25.0" />
+                    </font>
+                </Label>
+                <Label fx:id="lblDf" layoutX="367.0" layoutY="566.0" text="Label" />
+            </children>
+        </Pane>
+        <Button fx:id="btnBack" blendMode="MULTIPLY" layoutX="59.0" layoutY="678.0" mnemonicParsing="false" onAction="#backButton" prefHeight="60.0" prefWidth="120.0" text="Back" />
+        <Pane fx:id="pane1" layoutX="31.0" layoutY="133.0" prefHeight="541.0" prefWidth="410.0">
+            <children>
+                <ListView fx:id="listView" layoutX="25.0" layoutY="18.0" onEditStart="#showPokemon" prefHeight="505.0" prefWidth="360.0" />
+            </children>
+        </Pane>
+      <Button fx:id="btnBuy" blendMode="MULTIPLY" layoutX="297.0" layoutY="678.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="120.0" text="Buy" />
     </children>
 </AnchorPane>
