--- a/src/scenes/view/TrainerCollection.fxml
+++ b/src/scenes/view/TrainerCollection.fxml
@@ -9,74 +9,86 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="trainerCollectionAnc" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" stylesheets="@images/TrainerCollection.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="scenes.controller.TrainerCollectionController">
-   <children>
-      <Pane fx:id="pane1" layoutX="58.0" layoutY="12.0" prefHeight="429.0" prefWidth="226.0">
-         <children>
-            <Label fx:id="labelMyCollection" layoutX="27.0" layoutY="14.0" text="My collection" />
-            <Button fx:id="btnSelect1" blendMode="DARKEN" layoutX="74.0" layoutY="376.0" mnemonicParsing="false" onAction="#showSelectedCollection" text="Select" />
-            <ListView fx:id="listCollection" layoutX="13.0" layoutY="61.0" prefHeight="307.0" prefWidth="200.0" />
-         </children>
-      </Pane>
-      <Pane fx:id="pane2" layoutX="865.0" layoutY="16.0" prefHeight="429.0" prefWidth="226.0">
-         <children>
-            <Label fx:id="labelMyTeam" layoutX="57.0" layoutY="14.0" text="My team" />
-            <ListView fx:id="listTeam" layoutX="13.0" layoutY="61.0" prefHeight="307.0" prefWidth="200.0" />
-            <Button fx:id="btnSelect2" layoutX="74.0" layoutY="376.0" mnemonicParsing="false" onAction="#showSelectedTeam" text="Select" />
-         </children>
-      </Pane>
-      <Pane fx:id="pane3" layoutX="454.0" layoutY="18.0" prefHeight="314.0" prefWidth="255.0">
-         <children>
-            <ImageView fx:id="imageView" fitHeight="200.0" fitWidth="200.0" layoutX="28.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@images/pokeLogo.png" />
-               </image>
-            </ImageView>
-            <Button fx:id="btnAddToTeam" layoutX="27.0" layoutY="254.0" mnemonicParsing="false" text="Add To Battle Team" />
-         </children>
-      </Pane>
-      <Button fx:id="btnBack" layoutX="30.0" layoutY="744.0" mnemonicParsing="false" onAction="#backTrainerMenu" text="Back" />
-      <Label fx:id="lblName" layoutX="462.0" layoutY="465.0" text="Label" />
-      <Label fx:id="labelName" layoutX="356.0" layoutY="460.0" text="Name:">
-         <font>
-            <Font name="System Bold" size="25.0" />
-         </font>
-      </Label>
-      <Label fx:id="lblHP" layoutX="461.0" layoutY="618.0" text="Label" />
-      <Label fx:id="labelHealth" layoutX="356.0" layoutY="613.0" text="Health:">
-         <font>
-            <Font name="System Bold" size="25.0" />
-         </font>
-      </Label>
-      <Label fx:id="labelAttack" layoutX="359.0" layoutY="689.0" text="Attack:">
-         <font>
-            <Font name="System Bold" size="25.0" />
-         </font>
-      </Label>
-      <Label fx:id="labelDefence" layoutX="605.0" layoutY="689.0" text="Defence: ">
-         <font>
-            <Font name="System Bold" size="25.0" />
-         </font>
-      </Label>
-      <Label fx:id="lblAtk" layoutX="461.0" layoutY="694.0" text="Label" />
-      <Label fx:id="lblDf" layoutX="726.0" layoutY="694.0" text="Label" />
-      <Label fx:id="labelType" layoutX="483.0" layoutY="528.0" text="Type:">
-         <font>
-            <Font name="System Bold" size="25.0" />
-         </font>
-      </Label>
-      <Label fx:id="labelID" layoutX="665.0" layoutY="351.0" text="ID:">
-         <font>
-            <Font name="System Bold" size="25.0" />
-         </font>
-      </Label>
-      <Label fx:id="lblType" layoutX="590.0" layoutY="533.0" text="Label" />
-      <Label fx:id="lblID" layoutX="795.0" layoutY="369.0" text="Label" />
-      <Label fx:id="labelSpeed" layoutX="605.0" layoutY="613.0" text="Speed:">
-         <font>
-            <Font name="System Bold" size="25.0" />
-         </font>
-      </Label>
-      <Label fx:id="lblSpeed" layoutX="726.0" layoutY="618.0" text="Label" />
-   </children>
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" fx:id="trainerCollectionAnc" maxHeight="-Infinity" maxWidth="-Infinity"
+            minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0"
+            stylesheets="@images/TrainerCollection.css" xmlns="http://javafx.com/javafx/10.0.1"
+            fx:controller="scenes.controller.TrainerCollectionController">
+    <children>
+        <Pane fx:id="pane1" layoutX="58.0" layoutY="12.0" prefHeight="429.0" prefWidth="226.0">
+            <children>
+                <Label fx:id="labelMyCollection" layoutX="27.0" layoutY="14.0" text="My collection"/>
+                <Button fx:id="btnSelect1" blendMode="MULTIPLY" layoutX="74.0" layoutY="376.0" mnemonicParsing="false"
+                        onAction="#showSelectedCollection" text="Select"/>
+                <ListView fx:id="listCollection" layoutX="13.0" layoutY="61.0" prefHeight="307.0" prefWidth="200.0"/>
+            </children>
+        </Pane>
+        <Pane fx:id="pane2" layoutX="916.0" layoutY="12.0" prefHeight="429.0" prefWidth="226.0">
+            <children>
+                <Label fx:id="labelMyTeam" layoutX="57.0" layoutY="14.0" text="My team"/>
+                <ListView fx:id="listTeam" layoutX="13.0" layoutY="61.0" prefHeight="307.0" prefWidth="200.0"/>
+                <Button fx:id="btnSelect2" layoutX="74.0" layoutY="376.0" mnemonicParsing="false"
+                        onAction="#showSelectedTeam" text="Select"/>
+            </children>
+        </Pane>
+        <Pane fx:id="pane3" layoutX="454.0" layoutY="18.0" prefHeight="314.0" prefWidth="255.0">
+            <children>
+                <ImageView fx:id="imageView" fitHeight="200.0" fitWidth="200.0" layoutX="28.0" layoutY="14.0"
+                           pickOnBounds="true" preserveRatio="true">
+                    <image>
+                        <Image url="@images/pokeLogo.png"/>
+                    </image>
+                </ImageView>
+                <Button fx:id="btnAddToTeam" blendMode="MULTIPLY" layoutX="27.0" layoutY="254.0" mnemonicParsing="false"
+                        text="Add To Battle Team"/>
+            </children>
+        </Pane>
+        <Pane fx:id="pane4" layoutX="349.0" layoutY="419.0" prefHeight="345.0" prefWidth="503.0">
+            <children>
+                <Label fx:id="labelName" layoutX="53.0" layoutY="27.0" text="Name:">
+                    <font>
+                        <Font name="System Bold" size="25.0"/>
+                    </font>
+                </Label>
+                <Label fx:id="lblName" layoutX="149.0" layoutY="37.0" text="Label"/>
+                <Label fx:id="labelType" layoutX="268.0" layoutY="27.0" text="Type:">
+                    <font>
+                        <Font name="System Bold" size="25.0"/>
+                    </font>
+                </Label>
+                <Label fx:id="lblType" layoutX="356.0" layoutY="32.0" text="Label"/>
+                <Label fx:id="labelID" layoutX="192.0" layoutY="102.0" text="ID:">
+                    <font>
+                        <Font name="System Bold" size="25.0"/>
+                    </font>
+                </Label>
+                <Label fx:id="lblID" layoutX="247.0" layoutY="107.0" text="Label"/>
+                <Label fx:id="labelHealth" layoutX="53.0" layoutY="187.0" text="Health:">
+                    <font>
+                        <Font name="System Bold" size="25.0"/>
+                    </font>
+                </Label>
+                <Label fx:id="lblHP" layoutX="162.0" layoutY="192.0" text="Label"/>
+                <Label fx:id="labelAttack" layoutX="55.0" layoutY="279.0" text="Attack:">
+                    <font>
+                        <Font name="System Bold" size="25.0"/>
+                    </font>
+                </Label>
+                <Label fx:id="lblAtk" layoutX="162.0" layoutY="284.0" text="Label"/>
+                <Label fx:id="labelSpeed" layoutX="272.0" layoutY="187.0" text="Speed:">
+                    <font>
+                        <Font name="System Bold" size="25.0"/>
+                    </font>
+                </Label>
+                <Label fx:id="labelDefence" layoutX="272.0" layoutY="279.0" text="Defence: ">
+                    <font>
+                        <Font name="System Bold" size="25.0"/>
+                    </font>
+                </Label>
+                <Label fx:id="lblSpeed" layoutX="393.0" layoutY="192.0" text="Label"/>
+                <Label fx:id="lblDf" layoutX="393.0" layoutY="284.0" text="Label"/>
+            </children>
+        </Pane>
+        <Button fx:id="btnBack" blendMode="MULTIPLY" layoutX="30.0" layoutY="744.0" mnemonicParsing="false"
+                onAction="#backTrainerMenu" text="Back"/>
+    </children>
 </AnchorPane>
