--- a/src/scenes/view/ShowAllPokemon.fxml
+++ b/src/scenes/view/ShowAllPokemon.fxml
@@ -3,23 +3,27 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.paint.LinearGradient?>
+<?import javafx.scene.paint.Stop?>
+<?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane fx:id="showAllPokemonAnc" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" stylesheets="@images/ShowAllPokemon.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="scenes.controller.ShowAllPokemonController">
     <children>
-        <Button fx:id="btnShowAllPokemon" blendMode="MULTIPLY" layoutX="59.0" layoutY="65.0" mnemonicParsing="false" onAction="#showPokemonCollection" prefHeight="60.0" prefWidth="191.0" text="Show All Pokémon" />
-        <Button fx:id="btnSelect" blendMode="MULTIPLY" layoutX="297.0" layoutY="65.0" mnemonicParsing="false" onAction="#showPokemon" prefHeight="60.0" prefWidth="120.0" text="Select" />
-        <Pane fx:id="pane2" layoutX="466.0" layoutY="46.0" prefHeight="708.0" prefWidth="455.0">
+        <Button fx:id="btnSelect" blendMode="MULTIPLY" layoutX="31.0" layoutY="61.0" mnemonicParsing="false" onAction="#showPokemon" prefHeight="60.0" prefWidth="120.0" text="Select" />
+        <Button fx:id="btnBack" blendMode="MULTIPLY" layoutY="724.0" mnemonicParsing="false" onAction="#backButton" prefHeight="60.0" prefWidth="120.0" text="Back" />
+        <Pane fx:id="pane1" layoutX="31.0" layoutY="133.0" prefHeight="541.0" prefWidth="410.0">
             <children>
-                <ImageView fx:id="imageView" fitHeight="200.0" fitWidth="200.0" layoutX="114.0" layoutY="35.0" pickOnBounds="true" preserveRatio="true">
-                    <image>
-                        <Image url="@images/pokeLogo.png" />
-                    </image>
-                </ImageView>
+                <ListView fx:id="listView" layoutX="25.0" layoutY="18.0" onEditStart="#showPokemon" prefHeight="505.0" prefWidth="360.0" />
+            </children>
+        </Pane>
+        <Pane fx:id="pane2" layoutX="466.0" layoutY="46.0" prefHeight="708.0" prefWidth="485.0">
+            <children>
                 <Label fx:id="labelName" layoutX="27.0" layoutY="330.0" text="Name:">
                     <font>
                         <Font name="System Bold" size="25.0" />
@@ -62,14 +66,30 @@
                     </font>
                 </Label>
                 <Label fx:id="lblDf" layoutX="367.0" layoutY="566.0" text="Label" />
+                <ImageView fx:id="imageView" fitHeight="200.0" fitWidth="200.0" layoutX="132.0" layoutY="72.0" pickOnBounds="true" preserveRatio="true">
+                    <image>
+                        <Image url="@images/pokeLogo.png" />
+                    </image>
+                </ImageView>
+            <Button fx:id="btnNickname" layoutX="75.0" layoutY="274.0" mnemonicParsing="false" onAction="#pokemonNickname" text="OK" />
+            <TextField fx:id="txtNickname" layoutX="152.0" layoutY="278.0" />
+            <Button fx:id="btnNoNickname" layoutX="357.0" layoutY="281.0" mnemonicParsing="false" onAction="#pokemonNoNickname" text="No" />
+            <Label fx:id="lblNickname" layoutX="145.0" layoutY="28.0" text="Give your new frind a  nickname!" />
+            <Circle fx:id="pokeBall" layoutX="232.0" layoutY="195.0" radius="135.0" stroke="BLACK" strokeType="INSIDE">
+               <fill>
+                  <LinearGradient endX="1.0" endY="1.0" proportional="false">
+                     <stops>
+                        <Stop color="WHITE" />
+                        <Stop color="WHITE" offset="0.04597701149425287" />
+                        <Stop color="WHITE" offset="0.5095785440613025" />
+                        <Stop color="#f80909" offset="0.9091914523837735" />
+                        <Stop color="#f80909" offset="1.0" />
+                     </stops>
+                  </LinearGradient>
+               </fill>
+            </Circle>
             </children>
         </Pane>
-        <Button fx:id="btnBack" blendMode="MULTIPLY" layoutX="59.0" layoutY="678.0" mnemonicParsing="false" onAction="#backButton" prefHeight="60.0" prefWidth="120.0" text="Back" />
-        <Pane fx:id="pane1" layoutX="31.0" layoutY="133.0" prefHeight="541.0" prefWidth="410.0">
-            <children>
-                <ListView fx:id="listView" layoutX="25.0" layoutY="18.0" onEditStart="#showPokemon" prefHeight="505.0" prefWidth="360.0" />
-            </children>
-        </Pane>
-      <Button fx:id="btnBuy" blendMode="MULTIPLY" layoutX="297.0" layoutY="678.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="120.0" text="Buy" />
+      <Button fx:id="btnBuy" blendMode="MULTIPLY" layoutX="258.0" layoutY="61.0" mnemonicParsing="false" onAction="#reArrangeScene" prefHeight="60.0" prefWidth="183.0" text="Catch Pokemon!" />
     </children>
 </AnchorPane>
